[package]
name = "forge-rsx"
version = "0.5.0"
authors = ["Montasir Mirghani <montasir@fluxor.one>"]
edition = "2024"
description = "A Rust macro library for declarative, JSX-like HTML generation. It allows you to write HTML structures with embedded logic, attributes, nested tags, loops, and more, directly in Rust code with a concise syntax."
license = "MIT"
homepage = "https://github.com/dr-montasir/forge-rsx"
repository = "https://github.com/dr-montasir/forge-rsx"
readme = "README.md"
keywords = ["rsx", "macro", "html", "template", "engine"]
categories = ["template-engine", "parser-implementations", "web-programming"]
exclude = [
    ".github/**",
    "examples/**",
    "tests/**",
    "Cargo.lock",
    "dev.md"
]

[dependencies]

[lib]
name = "forge_rsx"
path = "src/lib.rs"
